# Kho-sight

./: .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml  requirements.txt
docs/: RESEARCH.md  RULEBOOK_MAPPING.md  TRAINING.md
khosight/: __init__.py  cli.py
khosight/alerts/: __init__.py  sinks.py
khosight/audio/: __init__.py  kho_spotter.py
khosight/calibration/: __init__.py  court.py
khosight/perception/: __init__.py  builder.py  models.py
khosight/pipeline/: __init__.py  offline.py  realtime.py
khosight/report/: __init__.py  generator.py
khosight/rules/: __init__.py  engine.py  events.py
notebooks/: autolabel_colab.ipynb  train_khosight_colab.ipynb
scripts/: auto_label.py  calibrate_court.py  pick_court.py  prepare_dataset.py  train_detector.py
tests/: test_court.py  test_perception.py  test_report.py  test_rules.py
